hphp/hack/test/typecheck/new_inference/artillery.php.like_types.exp
File "artillery.php", line 9, characters 10-23:
The keys of this Map are incompatible (Typing[4110])
File "artillery.php", line 8, characters 61-62:
Expected Tk
File "artillery.php", line 8, characters 41-42:
But got dynamic because it is an unenforceable type
File "artillery.php", line 9, characters 10-23:
The values of this Map are incompatible (Typing[4110])
File "artillery.php", line 8, characters 65-66:
Expected Tv
File "artillery.php", line 8, characters 48-49:
But got dynamic because it is an unenforceable type
